Fix orderbook scroll on small devices

--- a/packages/manager-components/src/components/Orderbook/styles.css
+++ b/packages/manager-components/src/components/Orderbook/styles.css
@@ -6,6 +6,7 @@
 .orderbook__tables {
   display: flex;
   width: 100%;
+  overflow-x: auto;
 }
 
 .orderbook__table {
